// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ignored file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;

exports[`None exist file 1`] = `
=================================== (stderr) ===================================
[error] No files matching the pattern were found: "non-exist-file".

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;

exports[`Not matching pattern 1`] = `
=================================== (stderr) ===================================
[error] No files matching the pattern were found: "*.non-exist-pattern".

=================================== (stdout) ===================================

=================================== (write) ====================================
[]
`;

exports[`ignore-unknown alias 1`] = `
=================================== (stdout) ===================================
javascript.js

`;

exports[`ignore-unknown check 1`] = `
=================================== (stderr) ===================================
[warn] javascript.js
[warn] Code style issues found in the above file(s). Forgot to run Prettier?

=================================== (stdout) ===================================
Checking formatting...

=================================== (write) ====================================
[]
`;

exports[`ignore-unknown dir 1`] = `
=================================== (stdout) ===================================
javascript.js

`;

exports[`ignore-unknown pattern 1`] = `
=================================== (stdout) ===================================
javascript.js
override.as-js-file

`;

exports[`ignore-unknown write 1`] = `
=================================== (stdout) ===================================
javascript.js

=================================== (write) ====================================
[{"filename":"javascript.js","content":"const foo = /"bar/";/n"}]
`;
